# tiny-ghc

./: README.md  tinyGHC.cabal
docs/: Formal Description of tinyHaskell.md
src/: ASTSimplifier.hs  CCodeGenerator.hs  Cmm.hs  Lexer.hs  Main.hs  Ourlude.hs  Parser.hs  STG.hs  TypeChecker.hs  Types.hs
tests/: fibonacci-dp.hs  lazyEvaluation.hs  peanoNaturals.hs  quickSort.hs
tests/output/: garbage-collection.c
