cabal-version:      3.0
name:               tinyGHC
version:            0.1.0.0
homepage:           amralmorsi.github.io
license:            GPL-3.0-only

license-file:       LICENSE

author:             Amr Almorsi

maintainer:         amrfalmorsi@gmail.com

category:           Development
build-type:         Simple

extra-doc-files:    CHANGELOG.md


common warnings
    ghc-options: -Wall


library
  build-depends:       base >=4.17.2.1
                     , containers >=0.6 && <0.7
                     , mtl >=2.2 && <2.3
  default-language:    Haskell2010
  default-extensions:  NoImplicitPrelude
  exposed-modules:     Ourlude
                     , Cmm
                     , CCodeGenerator
                     , Lexer
                     , Parser
                     , ASTSimplifier
                     , STG
                     , TypeChecker
                     , Types
  hs-source-dirs:      src

executable tinyGHC

    main-is:          Main.hs

    build-depends:    base >=4.17.2.1
                    , containers >=0.6 && <0.7
                    , pretty-simple >=4.0
                    , mtl >=2.2 && <2.3
    hs-source-dirs:   src

    default-language: Haskell2010
